--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </li>
                 <li class="nav-item align-self-center">
                     <a class="nav-link px-md-4" href="./contact.html">
-                        <ion-icon name="pricetag-outline"></ion-icon>
+                        <ion-icon name="bag-outline"></ion-icon>
                     </a>
                 </li>
                 <li class="nav-item align-self-center">
@@ -86,7 +86,7 @@
 
 
     <!--FOOTER-->
-    <footer class="row p-5">
+    <footer class="row p-md-5 pt-4">
         <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
             <div class="column1-footer-links d-flex flex-column">
                 <a class="pb-2" href="./index.html">Home</a>
@@ -100,24 +100,16 @@
                 <h2>PINGWING</h2>
             </div>
             <div class="pb-2">
-                <a href="">
-                    <ion-icon name="logo-youtube"></ion-icon>
-                </a>
-                <a href="">
-                    <ion-icon name="logo-linkedin"></ion-icon>
-                </a>
-                <a href="">
-                    <ion-icon name="logo-facebook"></ion-icon>
-                </a>
-                <a href="">
-                    <ion-icon name="logo-instagram"></ion-icon>
-                </a>
+                <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
+                <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
             </div>
             <div>
                 <p>2021 &copy; PINGWING</p>
             </div>
         </div>
-        <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer">
+        <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-4 py-md-0">
             <div class="column3-footer-info">
                 <div class="info">
                     <ion-icon name="call-outline"></ion-icon>
@@ -129,8 +121,8 @@
                 </div>
                 <div class="info">
                     <ion-icon name="location-outline"></ion-icon>
-                    <p>
-                        Kempische Steenweg 293<br>
+                    <p class="m-0">
+                        Kempische Steenweg  293<br>
                         3500 Hasselt
                     </p>
                 </div>
