--- a/logIn.html
+++ b/logIn.html
@@ -39,7 +39,7 @@
                         <a class="">|</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="pricetag-outline"></ion-icon></a>
+                        <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="bag-outline"></ion-icon></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link pr-md-4" href="#l"><ion-icon name="person-outline"></ion-icon></a>
