--- a/overOns.html
+++ b/overOns.html
@@ -39,7 +39,7 @@
                         <a class="">|</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="pricetag-outline"></ion-icon></a>
+                        <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="bag-outline"></ion-icon></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link pr-md-4" href="#"><ion-icon name="person-outline"></ion-icon></a>
@@ -118,7 +118,7 @@
             </div>
         </main>
         <!--FOOTER-->
-        <footer class="row p-5">
+        <footer class="row p-md-5 pt-4">
             <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-2" href="./index.html">Home</a>
@@ -141,7 +141,7 @@
                     <p>2021 &copy; PINGWING</p>
                 </div>
             </div>
-            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-4 py-md-0">
                 <div class="column3-footer-info">
                     <div class="info">
                         <ion-icon name="call-outline"></ion-icon>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="info">
                         <ion-icon name="location-outline"></ion-icon>
-                        <p>
+                        <p class="m-0">
                             Kempische Steenweg  293<br>
                             3500 Hasselt
                         </p>
