winkelmandje verder bezig en login fix

--- a/logIn.html
+++ b/logIn.html
@@ -16,43 +16,42 @@
 </head>
 <body>
     <!--Navigatie-->
-    <div class="container-fluid fullpage m-0 p-0">
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <ul class="navbar-nav navigation-list">
-                    <li class="nav-item px-md-4 align-self-center">
-                        <a class="nav-link" href="#">Product </a>
-                    </li>
-                    <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
-                    </li>
-                    <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./overOns.html">Over ons</span></a>
-                    </li>
-                    <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item align-self-center">
-                        <a class="">|</a>
-                    </li>
-                    <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="bag-outline"></ion-icon></a>
-                    </li>
-                    <li class="nav-item align-self-center">
-                        <a class="nav-link pr-md-4" href="#l"><ion-icon name="person-outline"></ion-icon></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+<div class="container-fluid fullpage m-0 p-0">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <a class="navbar-brand brand" href="./index.html">Pingwing</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <ul class="navbar-nav navigation-list">
+                <li class="nav-item px-md-4 align-self-center">
+                    <a class="nav-link" href="#">Product </a>
+                </li>
+                <li class="nav-item align-self-center">
+                    <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
+                </li>
+                <li class="nav-item align-self-center">
+                    <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item align-self-center">
+                    <a class="nav-link px-md-4" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item align-self-center">
+                    <a class="">|</a>
+                </li>
+                <li class="nav-item align-self-center">
+                    <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="bag-outline"></ion-icon></a>
+                </li>
+                <li class="nav-item align-self-center">
+                    <a class="nav-link pr-md-4" href="#"><ion-icon name="person-outline"></ion-icon></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <!--Forms login en registreer-->
     <main class="container">
         <div class="row">
-            <div class="col-md-6 contact-form pb-md-5 mb-5">
+            <div class="col-md-5 contact-form pb-md-5 mb-5">
                 <div class="contact-form-header py-5">
                     <h1>Log in</h1>
                 </div>
@@ -74,7 +73,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 contact-form pb-md-5 mb-5">
+            <div class="col-md-5 offset-md-2 contact-form pb-md-5 mb-5">
                 <div class="contact-form-header py-5">
                     <h1>Registreer</h1>
                 </div>
@@ -122,5 +121,6 @@
             </div>
         </div>
     </main>
+</div>
 </body>
 </html>
