--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -65,7 +65,25 @@
                                 <h4 class="m-0">Totaal</h4>
                             </div>
                         </div>
-                        <div class="col-12">3</div>
+                        <div class="col-12 winkelmandje-details-box-info py-3">
+                            <div class="winkelmandje-details-box-info-details">
+                                <div class="winkelmandje-details-box-info-details-product">
+                                    <p>test</p>
+                                </div>
+                                <div>
+                                    <p>test2</p>
+                                </div>
+                            </div>
+                            <div class="winkelmandje-details-box-info-hoeveelheid-prijs-totaal">
+                                <p>test3</p>
+                            </div>
+                            <div class="winkelmandje-details-box-info-hoeveelheid-prijs-totaal">
+                                <p>test4</p>
+                            </div>
+                            <div class="winkelmandje-details-box-info-hoeveelheid-prijs-totaal">
+                                <p>test5</p>
+                            </div>
+                        </div>
                         <div class="col-12">4</div>
                     </div>
                 </div>
