login pagina afwerking/done

--- a/logIn.html
+++ b/logIn.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,113 +15,185 @@
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Login</title>
 </head>
+
 <body>
     <!--Navigatie-->
-<div class="container-fluid fullpage m-0 p-0">
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <ul class="navbar-nav navigation-list">
-                <li class="nav-item px-md-4 align-self-center">
-                    <a class="nav-link" href="#">Product </a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link px-md-4" href="./contact.html">Contact</a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="">|</a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="bag-outline"></ion-icon></a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link pr-md-4" href="#"><ion-icon name="person-outline"></ion-icon></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!--Forms login en registreer-->
-    <main class="container">
-        <div class="row">
-            <div class="col-md-5 contact-form pb-md-5 mb-5">
-                <div class="contact-form-header py-5">
-                    <h1>Log in</h1>
+    <div class="container-fluid fullpage m-0 p-0">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <a class="navbar-brand brand" href="./index.html">Pingwing</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav navigation-list">
+                    <li class="nav-item px-md-4 align-self-center">
+                        <a class="nav-link" href="#">Product </a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span
+                                class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="">|</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./contact.html">
+                            <ion-icon name="bag-outline"></ion-icon>
+                        </a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link pr-md-4" href="#">
+                            <ion-icon name="person-outline"></ion-icon>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!--Forms login en registreer-->
+        <main class="container">
+            <div class="row">
+                <div class="col-md-5 contact-form pb-md-5 mb-5">
+                    <div class="contact-form-header py-5">
+                        <h1>Log in</h1>
+                    </div>
+                    <div class="row contact-form-input">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Email*</label>
+                                <input type="text" class="form-control" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Wachtwoord*</label>
+                                <input type="text" class="form-control" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <form action="/action_page.php">
+                                <input type="checkbox" id="akkoord" name="akkoord" value="Akkoord">
+                                <label for="Akkoord">Ik ga akkoord met de voorwaarden van Pingwing</label><br>
+                            </form>
+                        </div>
+                        <div class="col-md-12 d-flex pt-3 justify-content-md-end justify-content-center">
+                            <button class="btn px-4">Verzenden</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="row contact-form-input">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Email*</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1">
-                          </div>
+                <div class="col-md-5 offset-md-2 contact-form pb-md-5 mb-5">
+                    <div class="contact-form-header py-5">
+                        <h1>Registreer</h1>
                     </div>
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Wachtwoord*</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1">
-                          </div>
-                    </div>
-                    <div class="col-md-12 d-flex pt-3 justify-content-md-end justify-content-center">
-                        <button class="btn btn-primary px-4">Verzenden</button>
+                    <div class="row contact-form-input">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Naam*</label>
+                                <input type="text" class="form-control" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Telefoon</label>
+                                <input type="text" class="form-control" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Email*</label>
+                                <input type="text" class="form-control" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Wachtwoord*</label>
+                                <input type="text" class="form-control" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Straat+nr*</label>
+                                <input type="text" class="form-control" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Stad+postcode*</label>
+                                <input type="text" class="form-control" id="exampleInputPassword1">
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <form action="/action_page.php">
+                                <input type="checkbox" id="akkoord" name="akkoord" value="Akkoord">
+                                <label for="Akkoord">Ik ga akkoord met de voorwaarden van Pingwing</label><br>
+                            </form>
+                        </div>
+                        <div class="col-md-12 d-flex pt-3 justify-content-md-end justify-content-center">
+                            <button class="btn px-4">Verzenden</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-5 offset-md-2 contact-form pb-md-5 mb-5">
-                <div class="contact-form-header py-5">
-                    <h1>Registreer</h1>
+        </main>
+        <!--FOOTER-->
+        <footer class="row p-md-5 pt-4">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
+                <div class="column1-footer-links d-flex flex-column">
+                    <a class="pb-2" href="./index.html">Home</a>
+                    <a class="pb-2" href="./product.html">Product</a>
+                    <a class="pb-2" href="./overOns.html">Over ons</a>
+                    <a href="./contact.html">Contact</a>
                 </div>
-                <div class="row contact-form-input">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Naam*</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1">
-                          </div>
+            </div>
+            <div class="col-md-4 d-flex flex-column align-items-center justify-content-center column2-footer">
+                <div class="pb-2">
+                    <h2>PINGWING</h2>
+                </div>
+                <div class="pb-2">
+                    <a href="">
+                        <ion-icon name="logo-youtube"></ion-icon>
+                    </a>
+                    <a href="">
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                    </a>
+                    <a href="">
+                        <ion-icon name="logo-facebook"></ion-icon>
+                    </a>
+                    <a href="">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
+                </div>
+                <div>
+                    <p>2021 &copy; PINGWING</p>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-4 py-md-0">
+                <div class="column3-footer-info">
+                    <div class="info">
+                        <ion-icon name="call-outline"></ion-icon>
+                        <p>+32 123 45 789</p>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Telefoon</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1">
-                          </div>
+                    <div class="info pb-3">
+                        <ion-icon name="mail-outline"></ion-icon>
+                        <a href="mailto:test@test.com">Info@PingWing.be</a>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Email*</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1">
-                          </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Wachtwoord*</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1">
-                          </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Straat+nr*</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1">
-                          </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Stad+postcode*</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1">
-                          </div>
-                    </div>
-                    <div class="col-md-12 d-flex pt-3 justify-content-md-end justify-content-center">
-                        <button class="btn btn-primary px-4">Verzenden</button>
+                    <div class="info">
+                        <ion-icon name="location-outline"></ion-icon>
+                        <p class="m-0">
+                            Kempische Steenweg 293<br>
+                            3500 Hasselt
+                        </p>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
-</div>
+        </footer>
+    </div>
 </body>
+
 </html>
